--- a/setup/Setup A Javascript kernel for Jupyter.ipynb
+++ b/setup/Setup A Javascript kernel for Jupyter.ipynb
@@ -5,7 +5,7 @@
    "id": "376410fe",
    "metadata": {},
    "source": [
-    "# Setup a Javascript Kernel for Jupyter Lab"
+    "# Setup a Javascript Kernel for Jupyter"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "d939d6be",
    "metadata": {},
    "source": [
-    "For this experiment this [list](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) was used. First try is with [tslab] since it supports Javascript and Typescript although recent activity has been missing so it may be risky to use long term, but it does seem to be [supported by VSCode](https://marketplace.visualstudio.com/items?itemName=donjayamanne.typescript-notebook) as well, since [VSCode also allows running Jupyter notebooks](https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter)\n",
+    "For this experiment this [list](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) was used. First try is with [tslab](https://github.com/yunabe/tslab) since it supports Javascript and Typescript although recent activity has been missing so it may be risky to use long term, but it does seem to be [supported by VSCode](https://marketplace.visualstudio.com/items?itemName=donjayamanne.typescript-notebook) as well, since [VSCode also allows running Jupyter notebooks](https://marketplace.visualstudio.com/items?itemName=ms-toolsai.jupyter)\n",
     "\n",
     "Following the [tslab](https://github.com/yunabe/tslab) documentation mostly, with some modifications for my preferences. Caveat as well, I'm using a Mac, so may call on tools like [HomeBrew](https://brew.sh/) to make pre-requisite installations simpler, but may add separate sections for Windows specific setup in future."
    ]
